# caballus

./: .env  .gitignore  Cargo.toml
src/: api.rs  bid.rs  db.rs  driver.rs  engine.rs  error.rs  lib.rs  main.rs  route.rs  server.rs  simulation.rs  trip.rs
src/api/: interface.rs  mod.rs  server.rs
src/api/server/: mod.rs
src/api/server/handlers/: google_places.rs  route.rs  routes.rs
src/auth/: authorizor.rs  mod.rs  platform.rs  rules.polar  user.rs
src/engine/: driver_api.rs  driver_location_api.rs  driver_search_api.rs  helpers.rs  location_api.rs  mod.rs  passenger_api.rs  quote_api.rs  route_api.rs  trip_api.rs
src/entities/: bid.rs  driver.rs  location.rs  member.rs  mod.rs  passenger.rs  place.rs  quote.rs  route.rs  trip.rs
src/server/: mod.rs
src/server/handlers/: drivers.rs  google_places.rs  locations.rs  mod.rs  quotes.rs  routes.rs  trips.rs
