[package]
name = "caballus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
axum = "0.5.17"
axum-macros = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3.19"
geo-types = "0.7.8"
geozero = { version = "0.9.5", features = ["with-postgis-sqlx"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "mysql", "json", "decimal", "macros", "uuid", "chrono" ] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "*"